--- a/responsive.html
+++ b/responsive.html
@@ -5,9 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <title></title>
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="css/responsive.css">
   </head>
   <body>
+
+<nav>
+
+  <div>Accueil</div>
+
+  <div>A propos</div>
+
+  <div>Blog</div>
+
+  <div>Contact</div>
+
+</nav>
 
     <picture>
         <source srcset="img/bleu.jpg" media="(min-width: 740px)">
