--- a/responsive.html
+++ b/responsive.html
@@ -46,5 +46,15 @@
           <img src="img/route.jpg" alt="...">
   </picture>
 
+  <footer>
+
+    <div id="colonne1">Vos coordonnées</div>
+
+    <div id="colonne2"><a href="https://www.facebook.com/?stype=lo&jlou=AfcULBwZ8iIx8bmSnyo0T07OcU5Qm1h2094-eiIyhvWjKs0h06Tp3esDWTUxwXyUJikaRlBGCLgBxak_MI1-XTmv&smuh=34490&lh=Ac_pawlpOPH4Ibbg">Facebook</a></div>
+
+    <div id="colonne3">Mentions légales</div>
+
+  </footer>
+
   </body>
 </html>
