--- a/responsive.html
+++ b/responsive.html
@@ -11,13 +11,13 @@
 
 <nav>
 
-  <div>Accueil</div>
+  <div class="header">Accueil</div>
 
-  <div>A propos</div>
+  <div class="header">A propos</div>
 
-  <div>Blog</div>
+  <div class="header">Blog</div>
 
-  <div>Contact</div>
+  <div class="header">Contact</div>
 
 </nav>
 
@@ -45,6 +45,49 @@
         <source srcset="img/route.jpg" media="(max-width: 740px)">
           <img src="img/route.jpg" alt="...">
   </picture>
+
+  <section id="container">
+
+    <div class="entraineur">
+      <img src="img/entraineur_rcl.jpg"/>
+    </div>
+
+    <div class="gardiens">
+      <img src="img/gardien1.jpg"/>
+      <img src="img/gardien2.jpg"/>
+      <img src="img/gardien3.jpg"/>
+    </div>
+
+    <div class="defenseurs">
+      <img src="img/defenseur1"/>
+      <img src="img/defenseur2"/>
+      <img src="img/defenseur3"/>
+      <img src="img/defenseur4"/>
+      <img src="img/defenseur5"/>
+      <img src="img/defenseur6"/>
+      <img src="img/defenseur7"/>
+    </div>
+
+    <div class="milieux">
+      <img src="img/milieu1"/>
+      <img src="img/milieu2"/>
+      <img src="img/milieu3"/>
+      <img src="img/milieu4"/>
+      <img src="img/milieu5"/>
+      <img src="img/milieu6"/>
+      <img src="img/milieu7"/>
+    </div>
+
+    <div class="attaquants">
+      <img src="img/attaquant1"/>
+      <img src="img/attaquant2"/>
+      <img src="img/attaquant3"/>
+      <img src="img/attaquant4"/>
+      <img src="img/attaquant5"/>
+      <img src="img/attaquant6"/>
+    </div>
+
+  </section>
 
   <footer>
 
